fixed footer_navigation spacing

--- a/css/globals/footer.css
+++ b/css/globals/footer.css
@@ -78,8 +78,7 @@
 
 .footer__contact-info,
 .footer__bottom-footnote-content, 
-.footer__branding, 
-.footer__navigation {
+.footer__branding {
     align-items: center;
 }
 
